--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,9 +32,9 @@ dependencies:
     sdk: flutter
   lottie: ^3.1.3
   animated_text_kit: ^4.2.2
-  firebase_core: ^2.32.0
-  firebase_auth: ^4.20.0
-  cloud_firestore: ^4.17.5
+  firebase_core: ^3.10.1
+  firebase_auth: ^5.4.1
+  cloud_firestore: ^5.6.2
   flutter_spinkit: ^5.2.0
   google_sign_in: ^6.2.1
   image_picker: ^0.8.6
@@ -50,6 +50,8 @@ dependencies:
   path_provider: ^2.1.0
   open_file: ^3.5.4
   share_plus: ^10.0.0
+  geolocator: ^13.0.2
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
