--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   open_file: ^3.5.4
   share_plus: ^10.0.0
   geolocator: ^13.0.2
+  voice_to_text: ^1.0.3
+
 
 
   # The following adds the Cupertino Icons font to your application.
