--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,15 +1,21 @@
+buildscript {
+    ext.kotlin_version = '1.9.0' // Use the latest stable version
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.2.1' // Use the latest stable version
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+
 allprojects {
     repositories {
         google()
         mavenCentral()
     }
-    buildscript {
-        dependencies {
-            classpath 'com.android.tools.build:gradle:8.2.1'
-        }
-    }
 }
-
 rootProject.buildDir = "../build"
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
