--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,8 +51,9 @@ dependencies:
   open_file: ^3.5.4
   share_plus: ^10.0.0
   geolocator: ^13.0.2
-  voice_to_text: ^1.0.3
-
+  # voice_to_text: ^1.0.3
+  speech_to_text: ^7.0.0
+  google_fonts: ^6.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
