--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   cloud_firestore: ^5.6.2
   flutter_spinkit: ^5.2.0
   google_sign_in: ^6.2.1
-  image_picker: ^0.8.6
+  image_picker: ^1.1.2
   http: ^1.2.2
   url_launcher: ^6.3.1
   shared_preferences: ^2.0.15
@@ -57,6 +57,9 @@ dependencies:
   speech_to_text: ^7.0.0
   google_fonts: ^6.2.1
   intl: ^0.19.0
+  flutter_tts: ^4.2.2
+  firebase_realtime_chat: ^0.0.5
+  provider: ^6.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
