--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   flutter_tts: ^4.2.2
   firebase_realtime_chat: ^0.0.5
   provider: ^6.1.2
+  cross_file: ^0.3.4+2
+
 
 
   # The following adds the Cupertino Icons font to your application.
