--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,12 +1,45 @@
+//buildscript {
+//    ext.kotlin_version = '2.1.0' // Use the latest stable version
+//    repositories {
+//        google()
+//        mavenCentral()
+//    }
+//    dependencies {
+//        classpath 'com.android.tools.build:gradle:8.6.0' // Use the latest stable version
+//        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+////        implementation platform('com.google.firebase:firebase-bom:34.3.0')
+////        implementation 'com.google.firebase:firebase-analytics'
+//    }
+//}
+//
+//allprojects {
+//    repositories {
+//        google()
+//        mavenCentral()
+//    }
+//}
+//rootProject.buildDir = "../build"
+//subprojects {
+//    project.buildDir = "${rootProject.buildDir}/${project.name}"
+//}
+//subprojects {
+//    project.evaluationDependsOn(":app")
+//}
+//
+//tasks.register("clean", Delete) {
+//    delete rootProject.buildDir
+//}
 buildscript {
-    ext.kotlin_version = '1.9.0' // Use the latest stable version
+    ext.kotlin_version = '2.1.0'
     repositories {
         google()
         mavenCentral()
     }
+
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.2.1' // Use the latest stable version
+        classpath 'com.android.tools.build:gradle:8.1.4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.gms:google-services:4.4.0'
     }
 }
 
@@ -16,12 +49,14 @@ allprojects {
         mavenCentral()
     }
 }
-rootProject.buildDir = "../build"
+
+rootProject.buildDir = '../build'
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
 }
+
 subprojects {
-    project.evaluationDependsOn(":app")
+    project.evaluationDependsOn(':app')
 }
 
 tasks.register("clean", Delete) {
