--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,10 @@
 org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
+kotlin.code.style=official
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
+kotlin.jvm.target.validation.mode=error
+org.gradle.caching=false
+kotlin.incremental=false
