--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -128,7 +128,7 @@ name: judica
 description: "A new Flutter project."
 publish_to: 'none'
 
-version: 1.0.0+1
+version: 1.0.0+3
 
 environment:
   sdk: ^3.6.1
@@ -172,17 +172,17 @@ dependencies:
   firebase_auth: ^6.1.1
   cloud_firestore: ^6.0.3
   device_info_plus: ^12.1.0
-
-
-  # REMOVED: firebase_realtime_chat (causes gallery_saver and fluttertoast issues)
-  # Use firebase_database directly instead:
+  geocoding: ^4.0.0
   firebase_database: 12.0.3
-
+  flutter_lints: ^5.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
-
+  flutter_launcher_icons: ^0.14.4
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "icons/app_icon.png"
 flutter:
   uses-material-design: true
   generate: true
